# mcpplex

./: .gitignore  README.md  mcpplex.py  pyproject.toml  requirements.txt
tests/: test_mcpplex.py
